listings/ch02-guessing-game-tutorial/listing-02-04/output.txt
$ cargo build
   Compiling libc v0.2.177
   Compiling getrandom v0.3.4
   Compiling zerocopy v0.8.30
   Compiling cfg-if v1.0.4
   Compiling rand_core v0.9.3
   Compiling ppv-lite86 v0.2.21
   Compiling rand_chacha v0.9.0
   Compiling rand v0.9.2
   Compiling guessing_game v0.1.0 (/Users/mohitnandaniya/Contribute/rust-book/listings/ch02-guessing-game-tutorial/listing-02-04)
error[E0308]: mismatched types
   --> src/main.rs:27:21
    |
 27 |     match guess.cmp(&secret_number) {
    |                 --- ^^^^^^^^^^^^^^ expected `&String`, found `&{integer}`
    |                 |
    |                 arguments to this method are incorrect
    |
    = note: expected reference `&String`
               found reference `&{integer}`
note: method defined here
   --> /Users/mohitnandaniya/.rustup/toolchains/1.90-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/cmp.rs:979:8
    |
979 |     fn cmp(&self, other: &Self) -> Ordering;
    |        ^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `guessing_game` (bin "guessing_game") due to 1 previous error
